Вывод названия группы в списке карточек и кол-во карточек

--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -6,8 +6,7 @@
 
     <fragment
         android:id="@+id/cardsFragment"
-        android:name="com.example.ruen.views.CardsFragment"
-        android:label="@string/сards">
+        android:name="com.example.ruen.views.CardsFragment">
         <argument
             android:name="groupId"
             app:argType="long" />
